fix bug + refactor code